tests/error/modifier_errors/output_in_unitary.err
Error: Unitary constraint violation (at $FILE:8:4)
  | 
6 | @guppy(unitary=True)
7 | def test() -> None:
8 |     output("a", True)
  |     ^^^^^^^^^^^^^^^^^ This function cannot be called in a unitary context because
  |                       it is not unitary itself

Guppy compilation failed due to 1 previous error
